Adding bugs fixes